# maze_game

./: .gitignore  .pre-commit-config.yaml  .tool-versions  README.md  pyproject.toml  render.yaml  requirements.txt
src/maze_game/: __init__.py  app.py  maze_generator.py
src/maze_game/templates/: index.html
static/css/: style.css
static/js/: animator.js  audio.js  game.js  instructions.js  maze.js
tests/: __init__.py  test_app.py  test_maze_generator.py
