[project]
name = "maze-game"
version = "0.1.0"
description = "A visual maze game for teaching programming basics to 6-year-olds"
requires-python = ">=3.13"
dependencies = ["flask>=3.0.0", "gunicorn>=21.0.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "ruff>=0.1.0", "pyright>=1.1.0"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
